--- a/frontend/src/app/table/table.component.html
+++ b/frontend/src/app/table/table.component.html
@@ -31,7 +31,7 @@
 <br>
 
 <div class="form-group container-fluid d-flex justify-content-center ">
-  <a href="/add" class="btn btn-primary bg-success">Add Register</a>
+  <a href="/add" class="btn btn-primary bg-dark">Add Register</a>
 
 
 </div>
