--- a/frontend/src/app/template/template.component.html
+++ b/frontend/src/app/template/template.component.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-md  bg-success navbar-dark">
+<nav class="navbar navbar-expand-md  bg-dark navbar-dark">
   <!-- Brand -->
   <a class="navbar-brand" href="/home">CRUD App</a>
   <!-- Toggler/collapsibe Button -->
