--- a/frontend/src/app/add-data/add-data.component.html
+++ b/frontend/src/app/add-data/add-data.component.html
@@ -46,7 +46,7 @@
 
 
         <div class="form-group">
-          <input type="submit" name="add" class="btn btn-primary bg-success btn-block"
+          <input type="submit" name="add" class="btn btn-primary bg-dark btn-block"
                  value="Submit">
 
         </div>
