--- a/frontend/src/app/edit/edit.component.html
+++ b/frontend/src/app/edit/edit.component.html
@@ -47,7 +47,7 @@
 
 
           <div class="form-group">
-            <input type="submit" name="add" class="btn btn-primary bg-success btn-block"
+            <input type="submit" name="add" class="btn btn-primary bg-dark btn-block"
                    value="Submit">
 
           </div>
